feat: -primeNg installed -module structure -routing structure (problem with Augury)

--- a/src/app/uform/questionnaire/questionnaire.component.html
+++ b/src/app/uform/questionnaire/questionnaire.component.html
@@ -1,4 +1,1 @@
-<form [formGroup]="form" (ngSubmit)="onSubmitted()">
-  <app-infos-complementaires [myForm]="form"></app-infos-complementaires>
-  <button type="submit">Submit</button>
-</form>
+<p>questionnaire works!</p>
